--- a/css/invie.css
+++ b/css/invie.css
@@ -54,7 +54,7 @@ input:focus, textarea:focus {
 }
 
 .contenedor {
-  width: 800px;
+  max-width: 800px;
   margin: auto;
   position: relative;
 }
@@ -271,4 +271,135 @@ input:focus, textarea:focus {
 
 .tabla {
   margin: 50px 0;
+}
+
+
+@media screen and (max-width: 800px) {
+  .titulo {
+    font-size: 45px;
+    margin-top: 30px
+  }
+  .title-a {
+    font-size: 18px
+  }
+  .portada {
+    height: auto;
+  }
+
+  .portada .button {
+    margin-bottom: 30px;
+    display: inline-block;
+  }
+
+  .guitarras {
+    text-align: center;
+  }
+  .izquierda, .derecha {
+    float: none;
+    position: static;
+  }
+  .title-b {
+    margin: 0;
+  }
+
+  .guitarra li {
+    list-style-type: none;
+  }
+  .guitarra.b {
+    height: auto;
+  }
+  .contenedor-guitarra-b {
+    position: static;
+    margin: 0;
+  }
+  .contenedor-guitarra-a {
+    padding: 0;
+  }
+} 
+@media screen and (max-width: 767px) {
+  .footer .contenedor {
+    display: block;
+  }
+  .contacto {
+    margin: 0 auto;
+  }
+  .formulario {
+    display: block;
+    margin: 0 auto;
+    width: 300px;
+  }
+  .intereses label {
+    display: block;
+    font-size: 16px;
+  }
+  .col1 {
+    margin: 0; 
+  }
+  input[type="text"],
+  input[type="email"]{
+    font-size: 16px;
+    padding: 5px;
+  }
+  textarea {
+    width: 100%;
+
+    }
+
+  input[type="radio"],
+  input[type="checkbox"] {
+    zoom: 1.5;
+  }
+}
+@media screen and (max-width: 650px) {
+  .header {
+    text-align: center;
+  }
+  .logotipo {
+    margin: 0;
+  }
+  .menu {
+    position: static;
+    display: block;
+    text-align: center;
+  }
+  .menu li:first-child {
+    margin: 0;
+  }
+  .menu ul {
+    padding: 0;
+  }
+
+}
+
+@media screen and (max-width: 500px) {
+  .menu li {
+    display: block;
+    margin: 0;
+    padding: 8px 0;
+    border-bottom: 1px solid white;
+  }
+
+  .menu li:before {
+    display: none;
+  }
+  .menu li:first-child {
+    border-top: 1px solid white;
+  }
+  .portada {
+    text-align: center;
+  }
+  .titulo {
+    font-size: 30px;
+  }
+  .title {
+    font-size: 16px;
+  }
+  .guitarra img {
+    width: 200px;
+  }
+  .title-b {
+    font-size: 30px;
+  }
+
+
 }
