--- a/css/invie.css
+++ b/css/invie.css
@@ -1,20 +1,42 @@
-/** {
-  width: tamaño;
-  height: tamaño;
-  padding: 10px;
-  padding-top: 10px;
-  padding-right: 13px;
-  padding-left: 15px;
-  padding-bottom: 5px;
-  padding: 10px 13px 5px 15px;
-  margin: 10px;
-  margin-top: 10px;
-  margin-right: 13px;
-  margin-left: 15px;
-  margin-bottom: 5px;
-  margin: 10px 13px 5px 15px;
-  border: 2px solid red;
-}*/
+@font-face {
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon.eot?58trwq');
+  src:  url('../fonts/icomoon.eot?58trwq#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?58trwq') format('truetype'),
+    url('../fonts/icomoon.woff?58trwq') format('woff'),
+    url('../fonts/icomoon.svg?58trwq#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-phone:before {
+  content: "\e942";
+}
+.icon-envelop:before {
+  content: "\e945";
+}
+.icon-menu:before {
+  content: "\e9bd";
+}
+.icon-cancel-circle:before {
+  content: "\ea0d";
+}
+
 
 body {
   font-family: 'Allerta', sans-serif;
@@ -273,6 +295,20 @@ input:focus, textarea:focus {
   margin: 50px 0;
 }
 
+.burger-button {
+  width: 40px;
+  line-height: 40px;
+  height: 40px;
+  border-radius: 50%; 
+  background-color: #395667; 
+  display: inline-block;
+  text-align: center;
+  position: absolute;
+  left: 20px;
+  top: 20px;
+  cursor: pointer;
+  z-index: 3;
+}
 
 @media screen and (max-width: 800px) {
   .titulo {
@@ -372,6 +408,28 @@ input:focus, textarea:focus {
 }
 
 @media screen and (max-width: 500px) {
+  .portada .contenedor {
+    position: static;
+  }
+  .menu {
+    background: rgba(255, 60, 88,.8);
+    position: absolute;
+    left: -100%;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 2;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    transition: .3s;
+  }
+  .menu.active {
+    left: 0;
+  }
+  .menu ul {
+    flex: 1;
+  }
   .menu li {
     display: block;
     margin: 0;
