--- a/css/invie.css
+++ b/css/invie.css
@@ -1,42 +1,61 @@
 @font-face {
-  font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?58trwq');
-  src:  url('../fonts/icomoon.eot?58trwq#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?58trwq') format('truetype'),
-    url('../fonts/icomoon.woff?58trwq') format('woff'),
-    url('../fonts/icomoon.svg?58trwq#icomoon') format('svg');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'icomoon';
+    src:    url('../fonts/icomoon.eot?6s6d3k');
+    src:    url('../fonts/icomoon.eot?6s6d3k#iefix') format('embedded-opentype'),
+        url('../fonts/icomoon.ttf?6s6d3k') format('truetype'),
+        url('../fonts/icomoon.woff?6s6d3k') format('woff'),
+        url('../fonts/icomoon.svg?6s6d3k#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 [class^="icon-"], [class*=" icon-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
 
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-envelope:before {
+    content: "\e900";
+}
 .icon-phone:before {
-  content: "\e942";
-}
-.icon-envelop:before {
-  content: "\e945";
+    content: "\e901";
 }
 .icon-menu:before {
-  content: "\e9bd";
+    content: "\e902";
 }
-.icon-cancel-circle:before {
-  content: "\ea0d";
+.icon-close:before {
+    content: "\e903";
 }
 
+
+
+/** {
+  width: tamaño;
+  height: tamaño;
+  padding: 10px;
+  padding-top: 10px;
+  padding-right: 13px;
+  padding-left: 15px;
+  padding-bottom: 5px;
+  padding: 10px 13px 5px 15px;
+  margin: 10px;
+  margin-top: 10px;
+  margin-right: 13px;
+  margin-left: 15px;
+  margin-bottom: 5px;
+  margin: 10px 13px 5px 15px;
+  border: 2px solid red;
+}*/
 
 body {
   font-family: 'Allerta', sans-serif;
@@ -82,6 +101,7 @@ input:focus, textarea:focus {
 }
 
 .background {
+  background-color: #466173;
   background-image: url('../images/background.png');
   background-size: cover;
 }
@@ -295,40 +315,78 @@ input:focus, textarea:focus {
   margin: 50px 0;
 }
 
-.burger-button {
+
+.burguer-button {
   width: 40px;
+  border-radius: 50%;
   line-height: 40px;
   height: 40px;
-  border-radius: 50%; 
-  background-color: #395667; 
+  background: #395667;
   display: inline-block;
   text-align: center;
-  position: absolute;
+  cursor: pointer;
+  position: fixed;
   left: 20px;
   top: 20px;
-  cursor: pointer;
+  color: white;
   z-index: 3;
+  display: none;
+}
+
+.video-demo {
+  max-width: 500px;
+  width: 100%;
+  border: 5px solid #3c5b6e;
+}
+
+.video-demo-contenedor {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 80px;
 }
 
 @media screen and (max-width: 800px) {
+  /*body {
+    border: 10px solid red;
+  }*/
+  /*.contenedor {
+    width: auto;
+    max-width: 800px;
+  }*/
+
+  /* precios */
+  .tabla {
+    margin: 50px 20px;
+  }
+  .tabla .contenedor {
+    overflow: auto;
+    border: 1px solid #273b47;
+  }
+  /* precios */
+  /* portada */
   .titulo {
     font-size: 45px;
-    margin-top: 30px
+    margin-top: 30px;
   }
   .title-a {
-    font-size: 18px
+    font-size: 18px;
   }
   .portada {
     height: auto;
   }
-
   .portada .button {
     margin-bottom: 30px;
     display: inline-block;
   }
+  /* portada */
 
+
+  /* guitarras */
+  .video-demo-contenedor {
+    margin-bottom: 30px;
+  }
   .guitarras {
-    text-align: center;
+    text-align:center;
   }
   .izquierda, .derecha {
     float: none;
@@ -337,9 +395,8 @@ input:focus, textarea:focus {
   .title-b {
     margin: 0;
   }
-
   .guitarra li {
-    list-style-type: none;
+    list-style: none;
   }
   .guitarra.b {
     height: auto;
@@ -351,11 +408,16 @@ input:focus, textarea:focus {
   .contenedor-guitarra-a {
     padding: 0;
   }
-} 
+  /* guitarras */
+
+}
+
 @media screen and (max-width: 767px) {
+  /* footer */
   .footer .contenedor {
     display: block;
   }
+
   .contacto {
     margin: 0 auto;
   }
@@ -364,69 +426,98 @@ input:focus, textarea:focus {
     margin: 0 auto;
     width: 300px;
   }
+
   .intereses label {
     display: block;
     font-size: 16px;
   }
   .col1 {
-    margin: 0; 
+    margin: 0;
   }
   input[type="text"],
-  input[type="email"]{
+  input[type="email"] {
     font-size: 16px;
     padding: 5px;
   }
   textarea {
     width: 100%;
-
-    }
-
+  }
   input[type="radio"],
   input[type="checkbox"] {
     zoom: 1.5;
   }
+  /* footer */
 }
+
 @media screen and (max-width: 650px) {
+
   .header {
     text-align: center;
   }
+
   .logotipo {
     margin: 0;
   }
+
   .menu {
     position: static;
     display: block;
-    text-align: center;
   }
+
   .menu li:first-child {
     margin: 0;
   }
+
   .menu ul {
     padding: 0;
   }
 
+  /* guitarras */
+  /*.video-demo {
+    margin: 0 10px;
+  }*/
+  /* guitarras */
+
 }
 
+
 @media screen and (max-width: 500px) {
+  /* portada */
+  .portada .button {
+    display: block;
+  }
+  .precios .header .logotipo {
+    margin: 50px 0;
+  }
+  .burguer-button {
+    display: block;
+  }
   .portada .contenedor {
     position: static;
   }
+  .header {
+    position: static;
+  }
+  .header .contenedor {
+    position: static;
+  }
   .menu {
-    background: rgba(255, 60, 88,.8);
-    position: absolute;
+    background: rgba(255, 60, 88, .8);
+    position: fixed;
     left: -100%;
     top: 0;
+    z-index: 2;
     bottom: 0;
     right: 0;
-    z-index: 2;
     display: flex;
-    align-items: center;
     width: 100%;
+    align-items: center;
     transition: .3s;
   }
   .menu.active {
     left: 0;
   }
+
   .menu ul {
     flex: 1;
   }
@@ -440,6 +531,7 @@ input:focus, textarea:focus {
   .menu li:before {
     display: none;
   }
+
   .menu li:first-child {
     border-top: 1px solid white;
   }
@@ -449,15 +541,57 @@ input:focus, textarea:focus {
   .titulo {
     font-size: 30px;
   }
+
   .title {
-    font-size: 16px;
+    font-size: 16px
   }
+  /* portada */
+
+  /* guitarras */
   .guitarra img {
     width: 200px;
+    /*height: auto;*/
   }
   .title-b {
     font-size: 30px;
   }
+  .video-demo-contenedor {
+    margin: 0 10px 30px 10px;
+  }
+  /* guitarras */
+
+  /* footer */
+  .col2 {
+    align-items: stretch;
+  }
+  /* footer */
+
+}
 
 
+video {
+  width: 100%;
+}
+
+
+.video-responsive-contenedor {
+  position: relative;
+  padding-top: 56.25%;
+}
+
+.video-responsive-src {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
+
+
+@media screen and (-webkit-min-device-pixel-ratio: 2) {
+  .background {
+    background-image: url('../images/background2x.png');
+  }
 }
